--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.css
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.css
@@ -81,3 +81,15 @@
   overflow: auto;
   max-height: 350px;
 }
+
+.cortar{
+  display: block;
+    display: -webkit-box;
+    height: $font-size * $line-height * $lines;
+    font-size: $font-size;
+    line-height: $line-height;
+    -webkit-line-clamp: $lines;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
