--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
@@ -116,7 +116,7 @@
         <strong>Que mal!</strong> {{ mensajes }}
       </div>
 
-      <table id="example2" class="ui celled table" cellspacing="0" width="100%">
+      <!-- <table id="example2" class="ui celled table" cellspacing="0" width="100%">
         <thead>
             <tr>
                 <th>codEstado</th>
@@ -135,7 +135,7 @@
               <th>grupoEstado</th>
             </tr>
         </tfoot>
-    </table>
+    </table> -->
 
       <!-- Loader de Carga de los Datos -->
       <div id="loader-2" *ngIf="loading == 'show' " style="margin-left:45%; margin-top:5%; margin-bottom:5%;">
