--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
@@ -133,7 +133,7 @@
             <div class="row">
               <div class="col-md-6 mb-3">
                 <label for="validationDefault01">Funcionario Asignado</label>
-                <input type="text" class="form-control" id="validationDefault01" placeholder="First name"
+                <input type="text" class="form-control" id="validationDefault01" placeholder="Funcionario Asignado"
                        value="{{ nombre1FuncModal }} {{ nombre2FuncModal }} {{ apellido1FuncModal }} {{ apellido2FuncModal }} " disabled>
               </div>
 
