--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
@@ -116,26 +116,26 @@
         <strong>Que mal!</strong> {{ mensajes }}
       </div>
 
-      <!-- <table id="example2" class="ui celled table" cellspacing="0" width="100%">
+      <table id="example2" class="ui celled table" cellspacing="0" width="100%">
         <thead>
             <tr>
-                <th>codEstado</th>
-                <th>idEstado</th>
-                <th>descripcionEstado</th>
-                <th>inicalesEstado</th>
-                <th>grupoEstado</th>
+                <th>codCorrespondenciaEnc</th>
+                <th>codReferenciaSreci</th>
+                <th>temaComunicacion</th>
+                <th>idCorrespondenciaEnc</th>
+                <th>descCorrespondenciaEnc</th>
             </tr>
         </thead>
         <tfoot>
             <tr>
-              <th>codEstado</th>
-              <th>idEstado</th>
-              <th>descripcionEstado</th>
-              <th>inicalesEstado</th>
-              <th>grupoEstado</th>
+                <th>codCorrespondenciaEnc</th>
+                <th>codReferenciaSreci</th>
+                <th>temaComunicacion</th>
+                <th>idCorrespondenciaEnc</th>
+                <th>descCorrespondenciaEnc</th>
             </tr>
         </tfoot>
-    </table> -->
+    </table>
 
       <!-- Loader de Carga de los Datos -->
       <div id="loader-2" *ngIf="loading == 'show' " style="margin-left:45%; margin-top:5%; margin-bottom:5%;">
