--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
@@ -43,18 +43,7 @@
               <th>Accion</th>
             </tr>
         </thead>
-        <!-- <tfoot>
-            <tr>
-              <th>Estado</th>
-              <th>No. Interno</th>
-              <th>No. Ingresado</th>
-              <th>Nombre Institución</th>
-              <th>Tema Oficio</th>
-              <th>Fecha Ingreso</th>
-              <th>Fecha Entrega</th>
-              <th>Accion</th>
-            </tr>
-        </tfoot> -->
+        
         <tbody >
             <tr *ngFor="let item of JsonOutgetlistaOficiosAll | searchfilter:codCorr:search ">
               <td [ngClass]="{ 'text-warning': item.idEstado.idEstado == 3, 'text-danger' : item.idEstado.idEstado == 6,
@@ -131,7 +120,7 @@
                   <input type="text" class="form-control" id="validationDefault01" placeholder="First name" value="{{ nombre1FuncModal }} {{ nombre2FuncModal }} {{ apellido1FuncModal }} {{ apellido2FuncModal }} " disabled>
                 </div>
                 <div class="col-md-6 mb-3">
-                  <label for="validationDefault02">Buscar por Nombre</label>
+                  <label >Buscar por Nombre</label>
                   <input type="text" class="form-control" [(ngModel)]="search2" name="search2" id="search2" placeholder="Buscar" value="">
                 </div>
               </div>
@@ -162,7 +151,10 @@
                   <td> {{ item.idTipoFuncionario.descTipoFuncionario }} </td>
                   <td> {{ item.emailFuncionario }} </td>
                   <td> {{ item.celularFuncionario }} </td>
-                  <td *ngIf="loading_tr == 'hide'" > <a style="cursor: pointer;" class="nav-link"                          
+                  <td *ngIf="loading_tr == 'hide'" > <a style="cursor: pointer;" class="nav-link" 
+                          (click)="confirmUser( codOficioIntModal, codOficioRefModal, item.idFuncionario,
+                                item.nombre1Funcionario, item.apellido1Funcionario,
+                                item.nombre2Funcionario, item.apellido2Funcionario )"                          
                             data-toggle="modal" data-target="#myModalInstruccion">
                     <span [ngClass]="{ 'badge badge-pill badge-warning': item.nombre1Funcionario == nombre1FuncModal,
                                         'badge badge-pill badge-primary': item.nombre1Funcionario != nombre1FuncModal}"
@@ -195,22 +187,24 @@
           </button>
           <h4 class="modal-title" id="myModalLabel">Instrucción de la Asignación</h4>
         </div>
-        <div class="modal-body">
-          <form class="" action="index.html" method="post">
+        <div class="modal-body">          
+              <form #AsignarForm="ngForm" name="AsignarForm" role="form">  
             <div class="col-md-12 mb-4">
-              <label for="validationDefault01">Detalle de la Instrucción</label>
+              <h4 >Detalle de la Instrucción</h4>
               <!-- <input type="text" class="form-control" id="validationDefault01" placeholder="Detalle de la Instruccion"
                      value="" > -->
                  <textarea #buscadorOficio="ngModel" type="text" name="buscadorOficio" id="buscadorOficio"
                          ngControl="buscadorOficio" [(ngModel)]="asignarOficios.buscadorOficio" required maxlength="1400" minlength="15"
-                         class="form-control" id="buscadorOficio" placeholder="Instrucción de la Comunicacion" rows="5">
+                         class="form-control" id="buscadorOficio" required placeholder="Instrucción de la Comunicacion" rows="5">
                  </textarea>
-
+                 <small class="form-text text-muted" *ngIf="buscadorOficio.errors?.required" >La Instruccion es obligatoria</small>
+                 <small class="form-text text-muted" *ngIf="buscadorOficio.errors?.minlength" >Se nesesita por lo menos {{ buscadorOficio.errors.minlength.requiredLength }} caracteres</small>
                <hr class="colorgraph">
                <button type="button" id="closeModalAsignaCom" class="btn btn-success" data-dismiss="modal" style="cursor: pointer"
                      (click)="asignarOficioFuncionario( codOficioIntModalAsignacion, codOficioRefModalAsignacion, idFuncModalAsignacion,
                            nombre1FuncModalAsignacion, apellido1FuncModalAsignacion,
-                           nombre2FuncModalAsignacion, apellido2FuncModalAsignacion )">Guardar
+                           nombre2FuncModalAsignacion, apellido2FuncModalAsignacion )" 
+                           [disabled]="!AsignarForm.valid">Guardar
               </button>
                <button type="button" id="closeModalFinCom" class="btn btn-danger" data-dismiss="modal" style="cursor: pointer">Cerrar</button>
             </div>
