--- a/symfony/app/Resources/views/Emails/sendMailAsignacion.html.twig
+++ b/symfony/app/Resources/views/Emails/sendMailAsignacion.html.twig
@@ -113,6 +113,11 @@
                     <td>{{ descOficio }}</td>                    
                   </tr>
                   <tr class="modo1">
+                    <th scope="row">6</th>
+                    <td>Instruccion</td>
+                    <td>{{ instruccion }}</td>                    
+                  </tr>
+                  <tr class="modo1">
                     <th scope="row">5</th>
                     <td>Fecha Entrega</td>
                     <td>{{ fechaIngresoOfi }}</td>                    
@@ -122,7 +127,7 @@
                     <td>Fecha Creacion</td>
                     <td>{{ fechaMaxOfi }}</td>                    
                   </tr>
-                
+                                  
             </table>
 
             <br>
