--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
@@ -116,7 +116,7 @@
         <strong>Que mal!</strong> {{ mensajes }}
       </div>
 
-      <table id="example2" class="ui celled table" cellspacing="0" width="100%">
+      <table id="example2" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
             <tr>
                 <th>codCorrespondenciaEnc</th>
@@ -124,6 +124,7 @@
                 <th>temaComunicacion</th>
                 <th>idCorrespondenciaEnc</th>
                 <th>descCorrespondenciaEnc</th>
+                <th>Ver</th>
             </tr>
         </thead>
         <tfoot>
@@ -133,6 +134,7 @@
                 <th>temaComunicacion</th>
                 <th>idCorrespondenciaEnc</th>
                 <th>descCorrespondenciaEnc</th>
+                <th>Ver</th>
             </tr>
         </tfoot>
     </table>
