--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
@@ -119,22 +119,30 @@
       <table id="example2" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
             <tr>
-                <th>codCorrespondenciaEnc</th>
-                <th>codReferenciaSreci</th>
-                <th>temaComunicacion</th>
-                <th>idCorrespondenciaEnc</th>
-                <th>descCorrespondenciaEnc</th>
-                <th>Ver</th>
+              <th>Código Interno</th>
+              <th>Código Referencia</th>
+              <th>Tipo Comunicación</th>
+              <th>Fecha Creación</th>
+              <th>Fecha Entrega.</th>
+              <th>Institución Remitente</th>
+              <!-- <th>Descripción / Comunicación</th> -->
+              <th>Tema / Comunicación</th>
+              <th>Estado / Comunicación</th>
+              <th>Ver</th>
             </tr>
         </thead>
         <tfoot>
             <tr>
-                <th>codCorrespondenciaEnc</th>
-                <th>codReferenciaSreci</th>
-                <th>temaComunicacion</th>
-                <th>idCorrespondenciaEnc</th>
-                <th>descCorrespondenciaEnc</th>
-                <th>Ver</th>
+              <th>Código Interno</th>
+              <th>Código Referencia</th>
+              <th>Tipo Comunicación</th>
+              <th>Fecha Creación</th>
+              <th>Fecha Entrega.</th>
+              <th>Institución Remitente</th>
+              <!-- <th>Descripción / Comunicación</th> -->
+              <th>Tema / Comunicación</th>
+              <th>Estado / Comunicación</th>
+              <th>Ver</th>
             </tr>
         </tfoot>
     </table>
