--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
@@ -4,102 +4,7 @@
   <hr class="colorgraph">
   <!-- <div class="row"> -->
     <!-- Segunda Columna -->
-    <!-- <div class="col-xs-12 col-sm-6 col-md-3" style="border:1px; height: 100px; "> -->
-      <!-- INI | Panel de Filtros de Busqueda -->
-      <!-- <md-expansion-panel>
-          <md-expansion-panel-header>
-            <md-panel-title>
-              Filtros
-            </md-panel-title>
-            <md-panel-description>
-              de busqueda
-            </md-panel-description>
-          </md-expansion-panel-header> -->
-
-          <!-- Opcion de Estados -->
-          <!-- <md-card>
-            <md-card-content>
-              <p class="example-h2">Estado | Comunicacion</p>
-                <table>
-                  <tr>
-                    <td>
-                      <md-checkbox id="chkIngresado" class="example-margin" [(ngModel)]="chkIngresado"
-                          value="3" (click)="checkIdEstadosSend(7)" >Ingresado</md-checkbox>
-                    </td>
-                    <td>
-                      <md-checkbox class="example-margin" [(ngModel)]="chkAsignado"
-                        (click)="checkIdEstadosSend(3)">Asignado</md-checkbox>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <md-checkbox class="example-margin" [(ngModel)]="chkRespuesta"
-                         (click)="checkIdEstadosSend(8)">En Respuesta</md-checkbox>
-                    </td>
-                    <td>
-                      <md-checkbox class="example-margin" [(ngModel)]="chkFinalizado"
-                         (click)="checkIdEstadosSend(5)">Finalizao</md-checkbox>
-                    </td>
-                  </tr>
-                </table>
-            </md-card-content>
-          </md-card> -->
-
-          <!-- Opcion de Tipo de Comunicacion -->
-          <!-- <md-card>
-            <md-card-content>
-              <p class="example-h2">Tipo | Comunicacion</p>
-              <table>
-                <tr>
-                  <td>
-                    <md-checkbox class="example-margin" [(ngModel)]="chkOficio"
-                      (click)="checkIdTipoComunicacionSend(1)" >Oficio</md-checkbox>
-                  </td>
-                  <td>
-                    <md-checkbox class="example-margin" [(ngModel)]="chkCorreo"
-                      (click)="checkIdTipoComunicacionSend(5)">Correo</md-checkbox>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <md-checkbox class="example-margin" [(ngModel)]="chkLlamada"
-                      (click)="checkIdTipoComunicacionSend(7)">Llamada</md-checkbox>
-                  </td>
-                  <td>
-                    <md-checkbox class="example-margin" [(ngModel)]="chkVerbal"
-                      (click)="checkIdTipoComunicacionSend(8)">Verbal</md-checkbox>
-                  </td>
-                </tr>
-              </table>
-            </md-card-content>
-          </md-card>
-      </md-expansion-panel>
-    </div> -->
-
-      <!-- Panel para las Fechas -->
-      <!-- <div class="col-xs-12 col-sm-6 col-md-3" style="border:1px; height: 100px; ">
-      <md-expansion-panel>
-        <md-expansion-panel-header>
-          <md-panel-title>
-            Fechas
-          </md-panel-title>
-          <md-panel-description>
-            de busqueda
-          </md-panel-description>
-        </md-expansion-panel-header>
-
-        <md-form-field>
-          <input type="date" mdInput [min]="minDate" [max]="maxDate" placeholder="Fecha Inicial">
-        </md-form-field>
-
-        <md-form-field>
-          <input type="date" mdInput [min]="minDate" [max]="maxDate" placeholder="Fecha Final">
-        </md-form-field>
-      </md-expansion-panel>
-    </div> -->
-    <!-- FIN | Panel de Filtros de Busqueda -->
-  <!-- </div> -->
-
+    
   <div class="row-fluid">
     <div class="col-xs-12 col-md-12 col-lg-12" >
       <div class="alert alert-success alert-dismissible fade show" role="alert" *ngIf="status == 'success'" >
@@ -116,7 +21,7 @@
         <strong>Que mal!</strong> {{ mensajes }}
       </div>
 
-      <table id="example2" class="table table-striped table-bordered" cellspacing="0" width="100%">
+      <!-- <table id="example2" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
             <tr>
               <th>Código Interno</th>
@@ -124,9 +29,9 @@
               <th>Tipo Comunicación</th>
               <th>Fecha Creación</th>
               <th>Fecha Entrega.</th>
-              <th>Institución Remitente</th>
+              <th>Institución Remitente</th> -->
               <!-- <th>Descripción / Comunicación</th> -->
-              <th>Tema / Comunicación</th>
+              <!-- <th>Tema / Comunicación</th>
               <th>Estado / Comunicación</th>
               <th>Ver</th>
             </tr>
@@ -138,14 +43,14 @@
               <th>Tipo Comunicación</th>
               <th>Fecha Creación</th>
               <th>Fecha Entrega.</th>
-              <th>Institución Remitente</th>
+              <th>Institución Remitente</th> -->
               <!-- <th>Descripción / Comunicación</th> -->
-              <th>Tema / Comunicación</th>
+              <!-- <th>Tema / Comunicación</th>
               <th>Estado / Comunicación</th>
               <th>Ver</th>
             </tr>
         </tfoot>
-    </table>
+    </table> -->
 
       <!-- Loader de Carga de los Datos -->
       <div id="loader-2" *ngIf="loading == 'show' " style="margin-left:45%; margin-top:5%; margin-bottom:5%;">
@@ -240,44 +145,123 @@
                         <!-- <button class="btn btn-primary" type="submit">Submit form</button> -->
                     </form>
 
-                    <!-- Tabla de Funcionarios disponibles para asignar -->
-                    <div class="table table-striped table-bordered" style="height: 300px; overflow: auto">
-                      <!-- Loader de Carga de los Datos -->
-                      <div id="loader-2" *ngIf="loading_table == 'show'" style="margin-left:45%; margin-top:10%;" >
-                        <!-- <img src="assets/images/30.gif" alt="Cargando Tareas" > -->
-                        <img src="assets/images/832.gif" alt="Cargando Tareas" >
-                      </div>
-                      <table class="example" class="table table-striped table-bordered" style="font-size:15px" *ngIf="loadTabla2 == true">
-                        <thead>
-                          <tr>
-                            <th>Código Interno</th>
-                            <th>Código Referencia</th>
-                            <th>Fecha Creación</th>
-                            <th>Actividad de Comunicación</th>
-                            <th>Descripción de Comunicación</th>
-                            <th>Estado de Comunicación</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr *ngFor="let item of JsonOutgetlistaComunicacionDet | searchfilter:'codCorrespondenciaDet':search2 ">
-                            <td style="width:80px"> {{ item.codCorrespondenciaDet }}  </td>
-                            <td style="width:80px"> {{ item.codReferenciaSreci }} </td>
-                            <td > {{ item.fechaIngreso.timestamp | generateDate }} </td>
-                            <td> {{ item.actividadRealizar }} </td>
-                            <td> {{ item.descCorrespondenciaDet }} </td>
-                            <!-- <td> {{ item.idEstado.descripcionEstado }} </td> -->
-                            <td *ngIf="loading_tr == 'hide'" > <a style="cursor: pointer;" class="nav-link">
-                              <span [ngClass]="{ 'text-warning': item.idEstado.idEstado == 3,
-                                                  'text-primary': item.idEstado.idEstado == 5,
-                                                  'text-success': item.idEstado.idEstado == 7,
-                                                   'text-info': item.idEstado.idEstado == 8 }"
-                                    data-toggle="tooltip" data-placement="top" title="Estados de Comunicacion" >
-                                    {{ item.idEstado.descripcionEstado }} </span></a>
-                            </td>
-                          </tr>
-                        </tbody>
-                      </table>
+                <!-- Tabla de Funcionarios disponibles para asignar -->
+                <!-- Nav tabs | Detalle del Seguimiento -->
+                  <div class="row">
+                  <div class="col-lg-12">
+                  <!-- Nav tabs -->
+                    <ul class="nav nav-tabs nav-justified indigo" role="tablist">
+                        <li class="nav-item">
+                            <h4><a class="nav-link active" data-toggle="tab" href="#panel5" role="tab">
+                              <i class="fa fa-user"></i> Información de Seguimiento
+                            </a></h4>
+                        </li>
+                        <li class="nav-item">
+                            <h4><a class="nav-link" data-toggle="tab" href="#panel6" role="tab">
+                              <i class="fa fa-heart"></i> Información de Documentos
+                            </a></h4>
+                        </li>                        
+                    </ul>
+
+                    <div class="tab-content">
+                      <!-- Primer Panel -->
+                        <div class="tab-pane fade in show active" id="panel5" role="tabpanel">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                  <a data-toggle="collapse" href="#demo1">Accciones de Seguimiento</a>
+                                </h4>                                
+                                <!-- Tabla de Funcionarios disponibles para asignar -->
+                                <div class="table table-striped table-bordered" id="demo1" style="height: 300px; overflow: auto">
+                                    <!-- Loader de Carga de los Datos -->
+                                    <div id="loader-2" *ngIf="loading_table == 'show'" style="margin-left:45%; margin-top:5%;" >
+                                      <!-- <img src="assets/images/30.gif" alt="Cargando Tareas" > -->
+                                      <img src="assets/images/832.gif" alt="Cargando Tareas" >
+                                    </div>
+                                    <table class="example" class="table table-striped table-bordered" style="font-size:15px" *ngIf="loadTabla2 == true">
+                                      <thead>
+                                        <tr>
+                                          <th>Código Interno</th>
+                                          <th>Código Referencia</th>
+                                          <th>Fecha Creación</th>
+                                          <th>Actividad de Comunicación</th>
+                                          <th>Descripción de Comunicación</th>
+                                          <th>Estado de Comunicación</th>
+                                        </tr>
+                                      </thead>
+                                      <tbody>
+                                        <tr *ngFor="let item of JsonOutgetlistaComunicacionDet | searchfilter:'codCorrespondenciaDet':search2 ">
+                                          <td style="width:80px"> {{ item.codCorrespondenciaDet }}  </td>
+                                          <td style="width:80px"> {{ item.codReferenciaSreci }} </td>
+                                          <td > {{ item.fechaIngreso.timestamp | generateDate }} </td>
+                                          <td> {{ item.actividadRealizar }} </td>
+                                          <td> {{ item.descCorrespondenciaDet }} </td>
+                                          <!-- <td> {{ item.idEstado.descripcionEstado }} </td> -->
+                                          <td *ngIf="loading_tr == 'hide'" > 
+                                              <a style="cursor: pointer;" class="nav-link">
+                                                <span [ngClass]="{ 'text-warning': item.idEstado.idEstado == 3,
+                                                                'text-primary': item.idEstado.idEstado == 5,
+                                                                'text-success': item.idEstado.idEstado == 7,
+                                                                'text-info': item.idEstado.idEstado == 8 }"
+                                                  data-toggle="tooltip" data-placement="top" title="Estados de Comunicacion" >
+                                                  {{ item.idEstado.descripcionEstado }} </span>
+                                              </a>
+                                          </td>                            
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                  </div>
+
+                              </div>
+                        </div>
+
+                        <!-- Segundo Panel -->
+                        <div class="tab-pane fade" id="panel6" role="tabpanel">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                  <a data-toggle="collapse" href="#demo1">Documentos</a>
+                                </h4>                                
+                                <div class="row">
+                                    <!-- Loader de Carga de los Datos -->
+                                    <div id="loader-2" *ngIf="loading_table == 'show'" style="margin-left:45%;" >
+                                      <!-- <img src="assets/images/30.gif" alt="Cargando Tareas" > -->
+                                      <img src="assets/images/832.gif" alt="Cargando Tareas" >
+                                    </div>
+                    
+                                    <table class="table table-striped" cellspacing="0" width="100%"
+                                        *ngIf="loadTabla2 == true">
+                                      <thead>
+                                        <tr>
+                                          <th>#</th>
+                                          <th>Código Documento</th>
+                                          <th>Fecha Creacion</th>
+                                          <th>Documento</th>
+                                          <th>Descargar</th>
+                                        </tr>
+                                      </thead>
+                                      <tbody>
+                                        <tr *ngFor="let item of JsonOutgetlistaDocumentos; let i = index">
+                                          <th scope="row">{{ i + 1 }}</th>
+                                          <td>{{ item.codDocumento }}</td>
+                                          <td>{{ item.fechaIngreso.timestamp | generateDate }}</td>
+                                          <td>{{ item.urlDocumento }}</td>
+                                          <td>
+                                            <a *ngIf="item.urlDocumento != null && item.urlDocumento.length > 5"
+                                              href="http://localhost/sicdoc/symfony/web/uploads/correspondencia/{{ item.urlDocumento }}" target="_blank">
+                                              <!-- href="http://192.168.0.23/sicdoc/symfony/web/uploads/correspondencia/{{ item.urlDocumento }}" target="_blank"> -->
+                                              <!-- href="http://172.17.4.162/sicdoc/symfony/web/uploads/correspondencia/{{ item.urlDocumento }}" target="_blank"> -->
+                                              <!-- href="http://172.17.3.141/sicdoc/symfony/web/uploads/correspondencia/{{ item.urlDocumento }}" target="_blank"> -->
+                                                <i class="material-icons">photo</i>
+                                            </a>
+                                          </td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                              </div>
+                        </div>      
                     </div>
+                  </div>
+                  </div>
+
                     <hr class="colorgraph">
             			</div>
 
