--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
@@ -29,76 +29,65 @@
     <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%"   >
         <thead >
             <tr>
-              <th>Estado de Comunicación</th>
+              <th>Estado</th>
               <th>Código Interno</th>
               <th>Código Ingresado</th>
               <th>Institución Remitente</th>
               <th>Tema de Comunicación</th>
-              <th>Fecha Creación</th>
-              <th>Fecha Entrega.</th>
+              <!-- <th>Fecha Creación</th> -->
+              <!-- <th>Fecha Entrega.</th> -->
               <th>Accion</th>
             </tr>
         </thead>
-        <!-- <tfoot>
-            <tr>
-              <th>Estado</th>
-              <th>No.Interno</th>
-              <th>No.Ingresado</th>
-              <th>Institución</th>
-              <th>Tema</th>
-              <th>Fecha Ingreso</th>
-              <th>Fecha Entrega</th>
-              <th>Accion</th>
-            </tr>
-        </tfoot> -->
+
         <tbody >
             <tr *ngFor="let item of JsonOutgetlistaOficiosAll | searchfilter:codCorr:search ">
-              <td [ngClass]="{ 'text-warning': item.idEstado.idEstado == 3, 'text-info' : item.idEstado.idEstado == 8,
-                              'text-success': item.idEstado.idEstado == 7 }" >
+              <td [ngClass]="{ 'text-warning': item.idEstado == 3, 'text-info' : item.idEstado == 8,
+                              'text-success': item.idEstado == 7 }" >
                 <!-- <p class="alert alert-primary"> -->
-                  {{ item.idEstado.descripcionEstado }}
+                  {{ item.descripcionEstado }}
                 <!-- </p> -->
               </td>
               <td> {{ item.codCorrespondenciaEnc }} </td>
               <td> {{ item.codReferenciaSreci }} </td>
-              <td style="cursor: help" title="Descripcion: {{ item.idInstitucion.perfilInstitucion }}"> {{ item.idInstitucion.descInstitucion }} </td>
+              <td style="cursor: help" title="Descripcion: {{ item.perfilInstitucion }}"> {{ item.descInstitucion }} </td>
               <td> {{ item.temaComunicacion }} </td>
                 <!-- <td> {{ timeConverter( item.fechaMaxEntrega.timestamp )  }} </td> -->
-              <td> {{ item.fechaIngreso.timestamp | generateDate }} </td>
-              <td> {{ item.fechaMaxEntrega.timestamp | generateDate }} </td>
-              <td> <a *ngIf="item.idEstado.idEstado == 3 && item.idTipoDocumento.idTipoDocumento == 1
-                        && item.idTipoComunicacion.idTipoComunicacion == 1 "
+              <!-- <td> {{ item.fechaIngreso.timestamp | generateDate }} </td> -->
+              <!-- <td> {{ item.fechaMaxEntrega.timestamp | generateDate }} </td> -->
+              <td> <a *ngIf="item.idEstado == 3 && item.idTipoDocumento == 1
+                        && item.idTipoComunicacion == 1 "
                     href="/#" (click)="datoOficio( item.codCorrespondenciaEnc, item.codReferenciaSreci,
-                                                         item.idDeptoFuncional.idDeptoFuncional,
-                                                         item.idFuncionarioAsignado.nombre1Funcionario, item.idFuncionarioAsignado.apellido1Funcionario,
-                                                         item.idFuncionarioAsignado.nombre2Funcionario, item.idFuncionarioAsignado.apellido2Funcionario,
-                                                         item.idFuncionarioAsignado.idFuncionario, item.idEstado.idEstado, item.idCorrespondenciaEnc,
-                                                         item.idTipoDocumento.idTipoDocumento, item.idTipoComunicacion.idTipoComunicacion );
-                                                         listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento.idTipoDocumento, item.idTipoComunicacion.idTipoComunicacion);"
+                                                         item.idDeptoFuncional,
+                                                         item.nombre1Funcionario, item.apellido1Funcionario,
+                                                         item.nombre2Funcionario, item.apellido2Funcionario,
+                                                         item.idFuncionario, item.idEstado, item.idCorrespondenciaEnc,
+                                                         item.idTipoDocumento, item.idTipoComunicacion );
+                                                         listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento, item.idTipoComunicacion);"
                      data-toggle="modal" data-target="#t_and_c_m2" >
                      <!-- <i class="material-icons" data-placement="top" title="Comunicacion de Respuesta">create_new_folder</i> -->
                      <img src="/assets/icons/comunicacion/test_green_24x24.png" class="d-inline-block align-top" alt="" title="Comunicacion de Respuesta" >
                   </a>
                   <!-- <a *ngIf="item.idEstado.idEstado == 3 " -->
-                  <a *ngIf="item.idEstado.idEstado == 3 && item.idTipoDocumento.idTipoDocumento != 1 "
+                  <a *ngIf="item.idEstado == 3 && item.idTipoDocumento != 1 "
                      href="/#" (click)="datoOficio( item.codCorrespondenciaEnc, item.codReferenciaSreci,
-                                                         item.idDeptoFuncional.idDeptoFuncional,
-                                                         item.idFuncionarioAsignado.nombre1Funcionario, item.idFuncionarioAsignado.apellido1Funcionario,
-                                                         item.idFuncionarioAsignado.nombre2Funcionario, item.idFuncionarioAsignado.apellido2Funcionario,
-                                                         item.idFuncionarioAsignado.idFuncionario, item.idEstado.idEstado, item.idCorrespondenciaEnc,
-                                                         item.idTipoDocumento.idTipoDocumento, item.idTipoComunicacion.idTipoComunicacion );
-                                                         listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento.idTipoDocumento, item.idTipoComunicacion.idTipoComunicacion);"
+                                                         item.idDeptoFuncional,
+                                                         item.nombre1Funcionario, item.apellido1Funcionario,
+                                                         item.nombre2Funcionario, item.apellido2Funcionario,
+                                                         item.idFuncionario, item.idEstado, item.idCorrespondenciaEnc,
+                                                         item.idTipoDocumento, item.idTipoComunicacion );
+                                                         listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento, item.idTipoComunicacion);"
                           data-toggle="modal" data-target="#t_and_c_m3" >
                     <!-- <i class="material-icons" data-toggle="tooltip" data-placement="top" title="Agregar Actividad a Comunicacion" >assignment</i> -->
                     <img src="/assets/icons/comunicacion/written-page_brow_24x24.png" class="d-inline-block align-top" alt="" title="Agregar Actividad a Comunicacion">
                   </a>
                   <a href="/#" (click)="datoOficio( item.codCorrespondenciaEnc, item.codReferenciaSreci,
-                                                         item.idDeptoFuncional.idDeptoFuncional,
-                                                         item.idFuncionarioAsignado.nombre1Funcionario, item.idFuncionarioAsignado.apellido1Funcionario,
-                                                         item.idFuncionarioAsignado.nombre2Funcionario, item.idFuncionarioAsignado.apellido2Funcionario,
-                                                         item.idFuncionarioAsignado.idFuncionario, item.idEstado.idEstado, item.idCorrespondenciaEnc,
-                                                         item.idTipoDocumento.idTipoDocumento, item.idTipoComunicacion.idTipoComunicacion );
-                                                         listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento.idTipoDocumento, item.idTipoComunicacion.idTipoComunicacion);"
+                                                         item.idDeptoFuncional,
+                                                         item.nombre1Funcionario, item.apellido1Funcionario,
+                                                         item.nombre2Funcionario, item.apellido2Funcionario,
+                                                         item.idFuncionario, item.idEstado, item.idCorrespondenciaEnc,
+                                                         item.idTipoDocumento, item.idTipoComunicacion );
+                                                         listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento, item.idTipoComunicacion);"
                           data-toggle="modal" data-target="#t_and_c_m" >
                       <!-- <i class="material-icons" data-toggle="tooltip" data-placement="top" title="Finalizar Comunicacion" >assignment_turned_in</i> -->
                       <img src="/assets/icons/comunicacion/verified-text-paper_blue_24x24.png" class="d-inline-block align-top" alt="" title="Finalizar Comunicacion" >
